# TNG033-Lab2

./: CMakeLists.txt  expression.cpp  expression.h  logarithm.cpp  logarithm.h  polynomial.cpp  polynomial.h  test.cpp
